--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -3,5 +3,26 @@
     border-radius: 5%;
     border: solid;
     margin-bottom: 30px;
+}
 
+.end-of-catalog-status {
+    background: #666060;
+    color: white;
+    margin-bottom: 10px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 150%;
+    text-align:center; 
+}
+
+.spinner-container {
+    display: flex;
+    height: 60px;
+    background-color: white;
+}
+
+.spinner {
+    width: 50px;
+    height: 50px; 
+    margin: auto;  
 }
