--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,12 @@
+.container {
+  width: 90%;
+}
+
+.title-heading {
+  text-align: center;
+  margin-top: 30px;
+}
+
 .listing-item {
   height: 250px;
   border-radius: 5%;
@@ -13,6 +22,10 @@
   line-height: 50px;
   font-size: 150%;
   text-align: center;
+}
+
+.product {
+  padding: 20px;
 }
 
 .ad {
