--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -5,6 +5,7 @@
 .title-heading {
   text-align: center;
   margin-top: 30px;
+  color: darkorchid;
 }
 
 .listing-item {
@@ -26,11 +27,14 @@
 
 .product {
   padding: 20px;
+  position: relative;
+  border-color: darkorchid;
 }
 
 .ad {
   width: 100%;
-  height: 100%
+  height: 100%;
+  border-color: darkorchid;
 }
 
 .spinner-container {
@@ -43,4 +47,29 @@
   width: 50px;
   height: 50px;
   margin: auto;
+}
+
+.face {
+  position: absolute;
+  width: 90%;
+  left: 10%;
+  right: 10%;
+  top: 70px;
+}
+
+.price {
+  position: absolute;
+  bottom: 15px;
+  right: 10px;
+  font-weight: 200%;
+  font-size: x-large;
+  font-style: bold;
+  color: orangered
+}
+
+.date {
+  font-style: italic;
+  position: absolute;
+  bottom: 20px;
+  left: 10px;
 }
